<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/temp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Temperature" />

        <TextView
            android:id="@+id/minLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_toRightOf="@+id/temp"
            android:text="@string/min" />

        <TextView
            android:id="@+id/minVal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_toRightOf="@+id/minLabel"
            android:text="2323" />

        <TextView
            android:id="@+id/maxLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_toRightOf="@+id/minVal"
            android:text="@string/max" />

        <TextView
            android:id="@+id/maxVal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_toRightOf="@+id/maxLabel"
            android:text="34332432" />

        <TextView
            android:id="@+id/weather"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/temp"
            android:layout_marginTop="10dp"
            android:text="@string/Weather" />

        <TextView
            android:id="@+id/weatherVal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/temp"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="10dp"
            android:layout_toRightOf="@+id/weather"
            android:text="2323" />

        <TextView
            android:id="@+id/wind"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/weather"
            android:layout_marginTop="10dp"
            android:text="@string/wind" />

        <TextView
            android:id="@+id/windVal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/weather"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="10dp"
            android:layout_toRightOf="@+id/wind"
            android:text="32423423" />

    </RelativeLayout>

</androidx.cardview.widget.CardView>

