<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="16dp"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/latLong"
        style="@style/font_style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="0.0"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/mainContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/location"
                style="@style/font_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/country"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/locationVal"
                style="@style/font_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text=""
                app:layout_constraintBottom_toBottomOf="@id/location"
                app:layout_constraintStart_toEndOf="@id/location"
                app:layout_constraintTop_toTopOf="@id/location" />

            <TextView
                android:id="@+id/lat"
                style="@style/font_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:text="@string/Latitude"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/location" />

            <TextView
                android:id="@+id/latVal"
                style="@style/font_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                app:layout_constraintBottom_toBottomOf="@id/lat"
                app:layout_constraintStart_toEndOf="@id/lat"
                app:layout_constraintTop_toTopOf="@id/lat" />

            <TextView
                android:id="@+id/lon"
                style="@style/font_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:text="@string/Longitude"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/lat" />

            <TextView
                android:id="@+id/lonVal"
                style="@style/font_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                app:layout_constraintBottom_toBottomOf="@id/lon"
                app:layout_constraintStart_toEndOf="@id/lon"
                app:layout_constraintTop_toTopOf="@id/lon" />

            <TextView
                android:id="@+id/description"
                style="@style/font_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:text="@string/Description"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/lon" />

            <TextView
                android:id="@+id/descriptionVal"
                style="@style/font_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                app:layout_constraintBottom_toBottomOf="@id/description"
                app:layout_constraintStart_toEndOf="@id/description"
                app:layout_constraintTop_toTopOf="@id/description" />

            <TextView
                android:id="@+id/temp"
                style="@style/font_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:text="@string/Temperature"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/description" />

            <TextView
                android:id="@+id/tempVal"
                style="@style/font_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                app:layout_constraintBottom_toBottomOf="@id/temp"
                app:layout_constraintStart_toEndOf="@id/temp"
                app:layout_constraintTop_toTopOf="@id/temp" />

            <TextView
                android:id="@+id/visibility"
                style="@style/font_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:text="@string/Visibility"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/temp" />

            <TextView
                android:id="@+id/visibilityVal"
                style="@style/font_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                app:layout_constraintBottom_toBottomOf="@id/visibility"
                app:layout_constraintStart_toEndOf="@id/visibility"
                app:layout_constraintTop_toTopOf="@id/visibility" />


            <TextView
                android:id="@+id/humidity"
                style="@style/font_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:text="@string/Humidity"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/visibility" />

            <TextView
                android:id="@+id/humidityVal"
                style="@style/font_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                app:layout_constraintBottom_toBottomOf="@id/humidity"
                app:layout_constraintStart_toEndOf="@id/humidity"
                app:layout_constraintTop_toTopOf="@id/humidity" />

            <TextView
                android:id="@+id/pressure"
                style="@style/font_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:text="@string/Pressure"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/humidity" />

            <TextView
                android:id="@+id/pressureVal"
                style="@style/font_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                app:layout_constraintBottom_toBottomOf="@id/pressure"
                app:layout_constraintStart_toEndOf="@id/pressure"
                app:layout_constraintTop_toTopOf="@id/pressure" />

            <TextView
                android:id="@+id/speed"
                style="@style/font_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:text="@string/Speed"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/pressure" />

            <TextView
                android:id="@+id/speedVal"
                style="@style/font_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                app:layout_constraintBottom_toBottomOf="@id/speed"
                app:layout_constraintStart_toEndOf="@id/speed"
                app:layout_constraintTop_toTopOf="@id/speed" />

            <TextView
                android:id="@+id/cloud"
                style="@style/font_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:text="@string/Weather"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/speed" />

            <TextView
                android:id="@+id/cloudVal"
                style="@style/font_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                app:layout_constraintBottom_toBottomOf="@id/cloud"
                app:layout_constraintStart_toEndOf="@id/cloud"
                app:layout_constraintTop_toTopOf="@id/cloud" />

            <TextView
                android:id="@+id/placeName"
                style="@style/font_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:text="@string/placeName"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cloud" />

            <TextView
                android:id="@+id/placeNameVal"
                style="@style/font_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                app:layout_constraintBottom_toBottomOf="@id/placeName"
                app:layout_constraintStart_toEndOf="@id/placeName"
                app:layout_constraintTop_toTopOf="@id/placeName" />

            <TextView
                android:id="@+id/icon"
                style="@style/font_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:text="@string/icon"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/placeName" />

            <ImageView
                android:id="@+id/iconVal"
                style="@style/font_style"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_marginLeft="10dp"
                app:layout_constraintBottom_toBottomOf="@id/icon"
                app:layout_constraintStart_toEndOf="@id/icon"
                app:layout_constraintTop_toTopOf="@id/icon" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>

